Fixed alignment on contact page

--- a/style.css
+++ b/style.css
@@ -412,9 +412,27 @@ header {
 
   .button-container {
     position: fixed;
+    display: none;
     top: 110px;
     right: 20px;
     z-index: 10;
+}
+
+.bottom-button-container {
+  position: fixed;
+  display: block;
+  bottom: 0;
+  right: 0;
+  margin-bottom: 35px;
+  margin-right: 15px;
+}
+
+
+.button-container-home {
+  position: fixed;
+  top: 110px;
+  right: 20px;
+  z-index: 1;
 }
 
   header {
@@ -545,24 +563,35 @@ header {
   padding: 10px 10px;
 }
 
-.bottom-button-container {
-  position: fixed;
-  display: block;
-  bottom: 0;
-  right: 0;
-  margin-bottom: 20px;
-  margin-right: 15px;
+
+.contact-container {
+  display: grid;
+  margin: 50px auto;
+  max-width: 70%;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  gap: 10px;
 }
 
-.button-container {
-  display: none;
+.email {
+  grid-row: 1 / 2;
+  grid-column: 1 / 2;
+}   
+
+.linkedin {
+  grid-row: 2 / 3;
+  grid-column: 1 / 2
 }
 
-.button-container-home {
-  position: fixed;
-  top: 110px;
-  right: 20px;
-  z-index: 1;
-}
+
+.phone {
+  grid-row: 3 / 4;
+  grid-column: 1 / 2;
+}   
+
+.cv {
+  grid-row: 4 / 5;
+  grid-column: 1 / 2;
+}  
 
 }
